--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "loglevel": "^1.6.1",
+    "node-logger": "0.0.1"
   }
 }
